# pi-calculator

./: .gitignore  LICENSE  README.md  pi_wasm_plan.md
.github/workflows/: deploy.yml
pi-gmp/: .gitignore  build.sh  pi_gmp.c
pi-gmp/pi-app/: index.html  package-lock.json  package.json  vite.config.js
pi-gmp/pi-app/src/: App.css  App.jsx  index.css
pi-gmp/www/: app.js  index.html  worker.js
pi-wasm/: Cargo.toml  build.sh
pi-wasm/pi-app/: index.html  package-lock.json  package.json  vite.config.js
pi-wasm/pi-app/src/: App.jsx  split_worker.js  worker.js
pi-wasm/src/: lib.rs
pi-wasm/www/: app.js  index.html  worker.js
